@@ -9,6 +9,10 @@ import ru.erp.sfsb.model.Setup;
 import ru.erp.sfsb.repository.SetupRepository;
 import ru.erp.sfsb.service.*;
 
+import java.util.List;
+
+import static java.util.stream.Collectors.toList;
+
 @Service
 @Slf4j
 public class SetupServiceImpl extends AbstractService<SetupDto, Setup, SetupRepository, SetupMapper>
@@ -33,26 +37,33 @@ public class SetupServiceImpl extends AbstractService<SetupDto, Setup, SetupRepo
         this.productionUnitService = productionUnitService;
     }
 
+//    @Override
+//    @Transactional
+//    public SetupDto save(SetupDto setupDto) {
+//        log.info("Saving Setup into DB");
+//        setupDto.setCutterTools(setupDto.getCutterTools().stream().map(
+//                e -> cutterToolService.get(e.getId())
+//        ).toList());
+//        setupDto.setToolings(setupDto.getToolings().stream().map(
+//                e -> toolingService.get(e.getId())
+//        ).toList());
+//        setupDto.setMeasureTools(setupDto.getMeasureTools().stream().map(
+//                e -> measureToolService.get(e.getId())
+//        ).toList());
+//        setupDto.setSpecialTools(setupDto.getSpecialTools().stream().map(
+//                e -> specialToolService.get(e.getId())
+//        ).toList());
+//        setupDto.setAdditionalTools(setupDto.getAdditionalTools().stream().map(
+//                e -> additionalToolService.get(e.getId())
+//        ).toList());
+//        setupDto.setProductionUnit(productionUnitService.get(setupDto.getProductionUnit().getId()));
+//        return mapper.toDto(repository.save(mapper.toEntity(setupDto)));
+//    }
+
     @Override
     @Transactional
-    public SetupDto save(SetupDto setupDto) {
-        log.info("Saving Setup into DB");
-        setupDto.setCutterTools(setupDto.getCutterTools().stream().map(
-                e -> cutterToolService.get(e.getId())
-        ).toList());
-        setupDto.setToolings(setupDto.getToolings().stream().map(
-                e -> toolingService.get(e.getId())
-        ).toList());
-        setupDto.setMeasureTools(setupDto.getMeasureTools().stream().map(
-                e -> measureToolService.get(e.getId())
-        ).toList());
-        setupDto.setSpecialTools(setupDto.getSpecialTools().stream().map(
-                e -> specialToolService.get(e.getId())
-        ).toList());
-        setupDto.setAdditionalTools(setupDto.getAdditionalTools().stream().map(
-                e -> additionalToolService.get(e.getId())
-        ).toList());
-        setupDto.setProductionUnit(productionUnitService.get(setupDto.getProductionUnit().getId()));
-        return mapper.toDto(repository.save(mapper.toEntity(setupDto)));
+    public List<SetupDto> getTechnologySetups(Long id) {
+        log.info("Looking all setups of technology id = {} in DB", id);
+        return repository.getSetupsByTechnologyId(id).stream().map(setup -> mapper.toDto(setup)).collect(toList());
     }
 }
